WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305165
Fix twitch keyboard scrolling
https://bugs.webkit.org/show_bug.cgi?id=305165
Summary
Fix twitch keyboard scrolling
ccarley2
Reported
2026-01-08 17:08:06 PST
keyboard scrolling does not work on iPad on twitch and zillow
Attachments
Add attachment
proposed patch, testcase, etc.
ccarley2
Comment 1
2026-01-08 17:08:08 PST
<
rdar://problem/149250203
>
ccarley2
Comment 2
2026-01-08 17:09:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56299
EWS
Comment 3
2026-01-21 09:52:58 PST
Committed
305945@main
(9161fa0164ff): <
https://commits.webkit.org/305945@main
> Reviewed commits have been landed. Closing PR #56299 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug