Cherry-pick 9161fa0164ff. rdar://168675103

Fix twitch keyboard scrolling
    https://bugs.webkit.org/show_bug.cgi?id=305165
    rdar://149250203

    Reviewed by Wenson Hsieh.

    The issue was that WKContetView was checking if the webView's scroll view
    had scroll enable, instead of the animator in question's scroll view had
    scrolling enabled.

    * LayoutTests/fast/scrolling/ios/keyboard-scroll-expected.txt: Added.
    * LayoutTests/fast/scrolling/ios/keyboard-scroll.html: Added.
    * Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm
    * Source/WebKit/UIProcess/ios/WKBaseScrollView.mm:
    (-[WKBaseScrollView initWithFrame:]):
    My change broke scrolling in subscrollable elements on iPhone. This changes
    the default scroll view to allow keyboard scrolling, which is consistent with
    iPad.
    * Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
    (-[WKContentView isScrollableForKeyboardScrollViewAnimator:]):

    Canonical link: https://commits.webkit.org/305945@main

Identifier: 305413.128@safari-7624-branch